Fixed CSS refs for remaining files

--- a/14Home-Page2.html
+++ b/14Home-Page2.html
@@ -3,8 +3,8 @@
 
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
-	<link href="./css/dashboard-0.css" rel="stylesheet" />
-	<link href="./css/sidebar.css" rel="stylesheet" />
+	<link href="css/dashboard-0.css" rel="stylesheet" />
+	<link href="css/sidebar.css" rel="stylesheet" />
 	<title>Document</title>
 </head>
 
