--- a/2Register-OTP.html
+++ b/2Register-OTP.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
-	<link href="./css/login-3.css" rel="stylesheet" />
+	<link href="css/login-3.css" rel="stylesheet" />
 	<title>Document</title>
 </head>
 
