--- a/3Register-Success.html
+++ b/3Register-Success.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
-	<link href="./css/login-4.css" rel="stylesheet" />
+	<link href="css/login-4.css" rel="stylesheet" />
 	<title>Document</title>
 </head>
 
