--- a/4Login-Page.html
+++ b/4Login-Page.html
@@ -4,7 +4,7 @@
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
-	<link href="./css/login-1.css" rel="stylesheet" />
+	<link href="css/login-1.css" rel="stylesheet" />
 	<title>Document</title>
 </head>
 
