--- a/6New-Transaction.html
+++ b/6New-Transaction.html
@@ -4,8 +4,8 @@
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
-	<link href="./css/dashboard-1.css" rel="stylesheet" />
-	<link href="./css/sidebar.css" rel="stylesheet" />
+	<link href="css/dashboard-1.css" rel="stylesheet" />
+	<link href="css/sidebar.css" rel="stylesheet" />
 	<title>Document</title>
 </head>
 
